# oai_dataset_processor

./: .gitignore  README.md  example_usage.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
dataset_processor/processors/: openai_processor.py
dataset_processor/relational_db/: orm_layout.py  storage_handler.py
dataset_processor/utils/: sample_creation.py
oai_dataset_processor/processors/: openai_processor.py
oai_dataset_processor/relational_db/: storage_handler.py
